<resources>
    <string name="app_name">RowdyHacks</string>
    <string name="Main_b_2">Delete Classes</string>
    <string name="W_text">Ace Finals!</string>
    <string name="Main_b_1">Add Class</string>
    <string name="Main_b_4">Log In</string>
    <string name="Main_b_3">Current Schedule</string>
    <string name="test_button">Back</string>
    <string name="textview">TextView</string>
    <string name="delete">Delete courses</string>

    <string name="deleteCourse1">Course 1:</string>
    <string name="deleteCourse2">Course 2:</string>
    <string name="deleteCourse3">Course 3:</string>
    <string name="deleteCourse4">Course 4:</string>
    <string name="deleteCourse5">Course 5:</string>
    <string name="deleteCourse6">Course 6:</string>

    <string name="blankText"></string>
    <string name="title_activity_delete_activ">Delete_activ</string>

    <string name="list_of_days">List of days</string>
    <string name="add_s1">ADD CLASS</string>

    <string-array name="spinnerRoot">
        <item>Courses</item>
        <item>Days</item>
        <item>Times</item>
    </string-array>



    <string-array name="Courses">
        <item>ACC 2013</item>
        <item>BI0 2313</item>
        <item>CHE 1103</item>
        <item>CS 1063</item>
        <item>EGR 2103</item>
        <item>FRN 1014</item>
        <item>GER 1014</item>
        <item>MAT 0203</item>
    </string-array>

    <string-array name="Days">
        <item>M, W and F</item>
        <item>T and TR</item>
        <item>M Only</item>
        <item>T Only</item>
        <item>W Only</item>
        <item>TR Only</item>
        <item>F Only</item>
        <item>S Only</item>
    </string-array>

    <string-array name="Times">
        <item>07:00 AM - 07:50 AM</item>
        <item>08:00 AM - 08:50 AM</item>
        <item>09:00 AM - 09:50 AM</item>
    </string-array>

</resources>
